# CPSC-370_BTC_derivates_AI_Chapman

./: .gitignore  Blockchain.js  app.py  blockchain.py  index.html  new_file.rs  scaffolding  snake.js  snake_game.html
blueprints/: blockchain.py  welcome.py
new_file/: block.py  blockchain.py  main.py
new_file/src/: App.js  Block.js  Blockchain.js  web3.js
new_file/src/contracts/: SimpleStorage.sol
new_file_path/: nominal.rs  rgb_schema.json
newfile/: dataStructures.ts
snake_game.py/: snake_game.py
snake_game_react/: .gitignore  package.json
snake_game_react/public/: index.html
snake_game_react/src/: App.js  Block.js  Blockchain.js  index.js
snake_game_react/src/components/: Food.js  Snake.js
src/: App.js  App.test.js  App.test.tsx  App.tsx  Blockchain.js  Blockchain1.ts  Blockchain2.ts  MainUI.js  ammDataStructures.ts  dataStructures.ts  dex.js  index.js
workspaces/: package.json
workspaces/cross-chain_composition/: tsconfig.json
workspaces/mySwap/: dex.ts
workspaces/mySwap/src/: App.test.tsx  App.tsx
workspaces/rgb20-token/: rgb20_schema.rs
workspaces/rgb20-token/contracts/: rgb20-token.contract.rgb  rgb20-token.contract.rgba
workspaces/rgb20-token/src/: main.rs
workspaces/rustbn.js/: Cargo.toml
