[package]
name = "rustbn-js"
version = "0.1.2"
authors = ["holgerd77 <Holger.Drewes@gmail.com>",
           "cdetrio <cdetrio@gmail.com>",
           "Alex Beregszaszi <alex@rtfs.hu>"]
publish = false

[dependencies]
bn = { git = "https://github.com/cdetrio/bn", branch = "mont-repr-fix" }
rgb = "0.8.37"
rustc-serialize = "0.3"
